
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 scalar_t__ EAGAIN ;
 scalar_t__ EWOULDBLOCK ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_SETSIZE ;
 int FD_ZERO (int *) ;
 scalar_t__ errno ;
 int read (int,char*,int) ;
 scalar_t__ select (int ,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

int
do_shell (int sockfd)
{
  while (1)
    {
      fd_set fds;
      FD_ZERO (&fds);
      FD_SET (0, &fds);
      FD_SET (sockfd, &fds);
      if (select (FD_SETSIZE, &fds, ((void*)0), ((void*)0), ((void*)0)))
 {
   int cnt;
   char buf[1024];
   if (FD_ISSET (0, &fds))
     {
       if ((cnt = read (0, buf, 1024)) < 1)
  {
    if (errno == EWOULDBLOCK || errno == EAGAIN)
      continue;
    else
      break;
  }
       write (sockfd, buf, cnt);
     }
   if (FD_ISSET (sockfd, &fds))
     {
       if ((cnt = read (sockfd, buf, 1024)) < 1)
  {
    if (errno == EWOULDBLOCK || errno == EAGAIN)
      continue;
    else
      break;
  }
       write (1, buf, cnt);
     }
 }
    }
}
